test/errors/js-syntax-error-in-html.txt
Error parsing script for bad-fu
unknown: Unexpected token, expected "{" (3:14)

  1 | 
  2 | 
> 3 |   class BadFu /=
    |               ^
  4 | 
